# chronochart

./: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js
src/: app.d.ts  hooks.client.ts
src-rs/: Cargo.toml  build.rs  tauri.conf.json
src-rs/migrations/: 20240316223025_init.sql
src-rs/src/: file.rs  main.rs  model.rs  util.rs
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src/lib/: bindings.ts  global.scss  index.ts  specta.ts  styles.scss
src/lib/component/dialog/: Dialog.svelte
src/lib/component/menubar/: MenuBar.svelte  ProjectMenu.svelte  style.scss
src/lib/component/timeline/: Event.svelte  EventCard.svelte  Lines.svelte  LinesSegment.svelte  Timeline.svelte  index.ts  test.json
src/lib/component/timeline/event/: EventCard.svelte  EventDialog.svelte  styles.scss
src/lib/component/titlebar/: EventMenu.svelte  ProjectMenu.svelte  TimelineMenu.svelte  Titlebar.svelte  style.scss
src/lib/component/toast/: Toast.svelte  ToastDialog.svelte  Toaster.svelte
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/project/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/project/event/[uuid]/: +page.svelte  +page.ts
src/routes/project/timeline/: +page.svelte
