[package]
name = "app"
edition = "2021"
version = "0.0.0"
default-run = "app"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
tokio = { version = "1.47.1", features = ["full"] }

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
tauri = { version = "1.6.1", features = ["window-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
window-shadows = "0.2.2"
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
eyre = "0.6.12"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["typescript"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
